[gd_scene load_steps=8 format=3 uid="uid://d2t4jabr7myot"]

[ext_resource type="Script" path="res://Scripts/TransitionManager.gd" id="1_vmv7e"]
[ext_resource type="AudioStream" uid="uid://c4cnyeqppiq7f" path="res://Resources/Music/Glyph Activation Warm Aura.wav" id="2_0cis5"]

[sub_resource type="Animation" id="Animation_yjr46"]
resource_name = "intro"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/intro:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_dymt5"]
resource_name = "outro"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/outro:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_fl22i"]
resource_name = "white_intro"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/intro2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1v1sn"]
resource_name = "white_outro"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/outro2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_whpp5"]
_data = {
"intro": SubResource("Animation_yjr46"),
"outro": SubResource("Animation_dymt5"),
"white_intro": SubResource("Animation_fl22i"),
"white_outro": SubResource("Animation_1v1sn")
}

[node name="TransitionManager" type="Node2D"]
script = ExtResource("1_vmv7e")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="intro" type="ColorRect" parent="CanvasLayer"]
visible = false
self_modulate = Color(0, 0, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="outro" type="ColorRect" parent="CanvasLayer"]
visible = false
self_modulate = Color(0, 0, 0, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="intro2" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="outro2" type="ColorRect" parent="CanvasLayer"]
visible = false
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_whpp5")
}

[node name="lightspeedsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0cis5")
volume_db = 6.0
pitch_scale = 1.3

[connection signal="ready" from="." to="." method="_on_ready"]
